--- a/my-japan-travel/src/App.css
+++ b/my-japan-travel/src/App.css
@@ -11,19 +11,47 @@
 .title{
   text-align: center;
 }
+.content{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 30px 20px;
+}
 .post{
-  padding: 20px 30px;
-  border: 1px solid #000;
+  padding: 20px 10px;
+  width: 300px;
 }
 .post_title{
+  padding: 10px;
   font-size: 20px;
+  background: #282c34;
+  color: #fff;
+  border-radius: 10px 10px 0 0;
 }
 .post_content{
-  margin-top: 20px;
+  background: #282c34;
+  border-radius: 0 0 10px 10px;
+}
+.post_img_wrap{
+  width: 100%;
+  height: 350px;
 }
 .post_img{
   width: 100%;
+  height: 100%;
 }
 .post_desc{
-  margin-top: 15px;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #fff;
+}
+.footer{
+  padding: 30px 0;
+  background: #282c34;
+}
+.copyright{
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
 }
