--- a/my-todo/src/App.css
+++ b/my-todo/src/App.css
@@ -1,4 +1,39 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+ul,li{
+  list-style: none;
+}
 .App {
+  margin: 30px auto;
+  padding: 30px;
+  max-width: 800px;
+  border: 1px solid #000;
+  border-radius: 20px;
   text-align: center;
 }
-
+.todo-form input{
+  padding: 5px 5px;
+  width: 300px;
+}
+.todo-form button{
+  margin-left: 10px;
+  padding: 8px 15px;
+  background: #000;
+  color: #fff;
+  border: none;
+}
+.list-wrap{
+  margin: 0 auto;
+  width: 500px;
+}
+.todo-list{
+  margin-top: 10px;
+  text-align: left;
+  word-wrap: break-word;
+  word-break: keep-all;
+}
+.todo-list span{
+  margin-right: 15px;
+}
