--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,7 @@
+*{
+  padding: 0;
+  margin: 0;
+}
 .list-box{
   display: flex;
 }
@@ -5,41 +9,68 @@
   margin-right: 20px;
 }
 
-.App {
-  text-align: center;
+ul,li{
+  list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*Light*/
+.light-room-wrap{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+}
+.light-room{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.light-box{
+  display: flex;
+  justify-content: center;
+}
+.light-parents,.light-child{
+  position: relative;
+  margin-left: 20px;
+  width: 100px;
+  height: 100px;
+  background: rgb(244,255,247);
+  background: radial-gradient(circle, rgba(244,255,247,1) 0%, rgba(255,255,255,1) 15%, rgba(255,255,255,1) 41%, rgba(233,233,233,1) 82%);
+  border-radius: 50%;
+}
+.light-parents:after,.light-child:after{
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: 110px;
+  height: 110px;
+  background: rgb(244,255,247);
+  background: radial-gradient(circle, rgba(244,255,247,1) 0%, rgba(255,255,255,1) 15%, rgba(255,255,255,1) 41%, rgba(233,233,233,1) 82%);
+  -webkit-filter: blur(5px);
+  border-radius: 50%;
+  content: '';
+}
+.light-child-list{
+  display: flex;
+}
+.bg-red,.bg-red:after{
+  background: rgb(255,244,254);
+  background: radial-gradient(circle, rgba(255,244,254,1) 0%, rgba(255,198,198,1) 15%, rgba(255,113,148,1) 41%, rgba(255,69,69,1) 82%);
+}
+.bg-yellow,.bg-yellow:after{
+  background: rgb(255,255,244);
+  background: radial-gradient(circle, rgba(255,255,244,1) 0%, rgba(249,255,198,1) 15%, rgba(255,234,113,1) 41%, rgba(255,181,69,1) 82%);
+}
+.bg-blue,.bg-blue:after{
+  background: rgb(244,244,255);
+  background: radial-gradient(circle, rgba(244,244,255,1) 0%, rgba(204,198,255,1) 15%, rgba(113,132,255,1) 41%, rgba(100,69,255,1) 82%);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-green,.bg-green:after{
+  background: rgb(244,255,247);
+  background: radial-gradient(circle, rgba(244,255,247,1) 0%, rgba(172,233,170,1) 15%, rgba(100,208,92,1) 41%, rgba(65,182,35,1) 82%);
 }
