--- a/my-app/src/component/snowflake/snow.css
+++ b/my-app/src/component/snowflake/snow.css
@@ -4,3 +4,12 @@ body {
 body::-webkit-scrollbar{
     display: none;
 }
+.button-wrap {
+    width: 100vw;
+    display: flex;
+    justify-content: flex-end;
+}
+.button-wrap button {
+    padding: 5px;
+    margin: 5px;
+}
