--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -9,18 +9,6 @@ a {
   text-decoration: none;
 }
 .app{
-  background-color: #000;
-}
-.app ul {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  background-color: white;
-}
-.app ul li a{
-  display: block;
-  padding: 10px;
-  border: 1px solid #000;
-  color: #000;
+  width: 100%;
+  height: 100vh;
 }
