--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -7,8 +7,37 @@ ul,li{
 }
 a {
   text-decoration: none;
+  color: #000;
+}
+button{
+  margin-top: 20px;
+  padding: 10px 0;
+  width: 300px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  background-color: #1b8393;
+  color: #fff;
+  cursor: pointer;
 }
 .app{
   width: 100%;
   height: 100vh;
+  text-align: center;
+  background-color: #282c34;
+  color: #fff;
+}
+.page-nav {
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.page-nav li{
+  padding: 5px 10px;
+  margin-left: 5px;
+  background: #1b8393;
+}
+.page-nav li a{
+  color: #fff;
 }
