--- a/my-app/src/component/login/login.css
+++ b/my-app/src/component/login/login.css
@@ -1,18 +1,14 @@
-.login-page{
-    width: 100%;
-    height: 100%;
-    background-color: #282c34;
-    text-align: center;
-}
+
 .login-page__wrap{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
     padding: 50px 0;
-    transform: translateY(50%);
+    transform: translateY(20%);
     width: 500px;
     background-color: #fff;
+    color: #000;
     border: 1px solid #000;
     border-radius: 5px;
 }
@@ -26,13 +22,4 @@
     width: 300px;
     border: 1px solid rgba(0,0,0,0.5);
     border-radius: 5px;
-}
-.login-form button{
-    margin-top: 20px;
-    padding: 10px 0;
-    width: 300px;
-    border: none;
-    background-color: #000;
-    color: #fff;
-    cursor: pointer;
 }
