--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -22,22 +22,35 @@ button{
 }
 .app{
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   text-align: center;
   background-color: #282c34;
   color: #fff;
 }
 .page-nav {
-  padding-top: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  padding: 0 20px;
+  height: 60px;
+  border-bottom: 1px solid #1b8393;
 }
 .page-nav li{
-  padding: 5px 10px;
-  margin-left: 5px;
-  background: #1b8393;
+  margin-left: 10px;
+}
+.page-nav li:first-child{
+  margin-left: 0;
 }
 .page-nav li a{
-  color: #fff;
+  display: inline-block;
+  padding: 0 10px;
+  color: #1b8393;
+  font-size: 18px;
+}
+.page-nav li a:hover,
+.page-nav li a:active{
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 5px;
 }
